--- a/style.css
+++ b/style.css
@@ -80,8 +80,73 @@ span {
   background-clip: text;
   color: transparent;
 }
-menu {
+#menu {
   color: white;
   font-size: 3em;
   display: none;
+}
+
+section {
+  min-height: 100vh;
+  padding: 5% 15%;
+}
+
+#home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+  color: white;
+}
+#home img {
+  width: 18vw;
+  border-radius: 50%;
+  margin-top: 3em;
+}
+
+.infoBox {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 0.5em;
+  max-width: 600px;
+}
+
+.infoBox h1 {
+  font-size: 5em;
+  font-weight: 500;
+}
+
+.infoBox h3 {
+  font-size: 2em;
+  font-weight: 400;
+}
+
+.infoBox p {
+  opacity: 0.7;
+}
+
+.buttonBox {
+  display: flex;
+  gap: 1em;
+}
+
+.buttonBox .button:nth-of-type(2) {
+  background-color: white;
+  color: var(--background);
+}
+
+.buttonBox .button:nth-of-type(2):hover {
+  background-color: var(--background);
+  color: white;
+}
+
+::-webkit-scrollbar {
+  width: 20px;
+  background-color: var(--background);
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, #6cff52, #3ec5ff);
 }
