--- a/style.css
+++ b/style.css
@@ -260,3 +260,34 @@ section {
   min-width: 25px;
   border-radius: 0.5em;
 }
+
+#contact {
+  background-color: var(--second-background);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+}
+form .inputBox {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  gap: 1em;
+}
+.inputBox span {
+  font-size: 1.5em;
+}
+form input {
+  font-size: 1.3em;
+  padding: 1em 0.5em;
+  border-radius: 0.5em;
+  border: none;
+  outline: none;
+}
+form input:focus {
+  background: rgb(229, 229, 229);
+}
